--- a/getmap-gui-tests/getmap-gui-test-widgets/getmap-gui-test-widgets.csproj
+++ b/getmap-gui-tests/getmap-gui-test-widgets/getmap-gui-test-widgets.csproj
@@ -44,9 +44,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cleanup.cs" />
     <Compile Include="InputCoordWnd.cs" />
     <Compile Include="Login.cs" />
+    <Compile Include="MenuDop.cs" />
+    <Compile Include="MenuNavigation.cs" />
+    <Compile Include="MenuNavigationHistory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScaleMenu.cs" />
     <Compile Include="SlideMenu.cs" />
   </ItemGroup>
   <ItemGroup>
