Добавлен класс для сравнения изображений

--- a/getmap-gui-tests/getmap-gui-tests-utils/getmap-gui-tests-utils.csproj
+++ b/getmap-gui-tests/getmap-gui-tests-utils/getmap-gui-tests-utils.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DegreeFormat.cs" />
+    <Compile Include="ImageComparer.cs" />
     <Compile Include="JS.cs" />
     <Compile Include="LonLat.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
