Начало работы над тестом

--- a/getmap-gui-tests/getmap-gui-tests/getmap-gui-tests.csproj
+++ b/getmap-gui-tests/getmap-gui-tests/getmap-gui-tests.csproj
@@ -64,6 +64,7 @@
     <Compile Include="TestBaseLayers.cs" />
     <Compile Include="TestChangeSortLayers.cs" />
     <Compile Include="TestCurrentExtent.cs" />
+    <Compile Include="TestEnableLayer.cs" />
     <Compile Include="TestErrorMessage.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="TestScale.cs" />
