--- a/getmap-gui-tests/getmap-gui-tests-utils/getmap-gui-tests-utils.csproj
+++ b/getmap-gui-tests/getmap-gui-tests-utils/getmap-gui-tests-utils.csproj
@@ -44,6 +44,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CreateScreenshot.cs" />
     <Compile Include="DegreeFormat.cs" />
     <Compile Include="ImageComparer.cs" />
     <Compile Include="JS.cs" />
