--- a/getmap-gui-tests/getmap-gui-tests/getmap-gui-tests.csproj
+++ b/getmap-gui-tests/getmap-gui-tests/getmap-gui-tests.csproj
@@ -74,6 +74,7 @@
     <Compile Include="TestSearch.cs" />
     <Compile Include="TestBaseLayer_Rosreestr.cs" />
     <Compile Include="TestChangePassword.cs" />
+    <Compile Include="TestVectorMenuLayer.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\getmap-gui-test-widgets\getmap-gui-test-widgets.csproj">
