--- a/getmap-gui-tests/getmap-gui-tests-utils/getmap-gui-tests-utils.csproj
+++ b/getmap-gui-tests/getmap-gui-tests-utils/getmap-gui-tests-utils.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="CreateScreenshot.cs" />
     <Compile Include="DegreeFormat.cs" />
+    <Compile Include="GetExtents.cs" />
     <Compile Include="ImageComparer.cs" />
     <Compile Include="JS.cs" />
     <Compile Include="LonLat.cs" />
