--- a/getmap-gui-tests/getmap-gui-test-widgets/getmap-gui-test-widgets.csproj
+++ b/getmap-gui-tests/getmap-gui-test-widgets/getmap-gui-test-widgets.csproj
@@ -45,7 +45,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cleanup.cs" />
+    <Compile Include="GetExtents.cs" />
     <Compile Include="InputCoordWnd.cs" />
+    <Compile Include="Layers.cs" />
     <Compile Include="Login.cs" />
     <Compile Include="MenuDop.cs" />
     <Compile Include="MenuNavigation.cs" />
