Добавлены новые классы.

--- a/getmap-gui-tests/getmap-gui-test-widgets/getmap-gui-test-widgets.csproj
+++ b/getmap-gui-tests/getmap-gui-test-widgets/getmap-gui-test-widgets.csproj
@@ -46,7 +46,9 @@
   <ItemGroup>
     <Compile Include="Cleanup.cs" />
     <Compile Include="GetExtents.cs" />
+    <Compile Include="HeaderLinks.cs" />
     <Compile Include="InputCoordWnd.cs" />
+    <Compile Include="InputNewPassword.cs" />
     <Compile Include="Layers.cs" />
     <Compile Include="Login.cs" />
     <Compile Include="MenuDop.cs" />
