Добавлен новый класс

--- a/getmap-gui-tests/getmap-gui-test-widgets/getmap-gui-test-widgets.csproj
+++ b/getmap-gui-tests/getmap-gui-test-widgets/getmap-gui-test-widgets.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cleanup.cs" />
+    <Compile Include="CoordsXY.cs" />
     <Compile Include="GetExtents.cs" />
     <Compile Include="HeaderLinks.cs" />
     <Compile Include="InputCoordWnd.cs" />
