Тест полностью выполнен #572

--- a/getmap-gui-tests/getmap-gui-tests/getmap-gui-tests.csproj
+++ b/getmap-gui-tests/getmap-gui-tests/getmap-gui-tests.csproj
@@ -75,6 +75,7 @@
     <Compile Include="TestBaseLayer_Rosreestr.cs" />
     <Compile Include="TestChangePassword.cs" />
     <Compile Include="TestVectorMenuLayer.cs" />
+    <Compile Include="TestZoomArea.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\getmap-gui-test-widgets\getmap-gui-test-widgets.csproj">
