--- a/getmap-gui-tests/getmap-gui-tests-utils/getmap-gui-tests-utils.csproj
+++ b/getmap-gui-tests/getmap-gui-tests-utils/getmap-gui-tests-utils.csproj
@@ -50,6 +50,7 @@
     <Compile Include="JS.cs" />
     <Compile Include="LonLat.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="XY.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
