--- a/getmap-gui-tests/getmap-gui-tests/getmap-gui-tests.csproj
+++ b/getmap-gui-tests/getmap-gui-tests/getmap-gui-tests.csproj
@@ -66,8 +66,10 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestAdminAccess.cs" />
+    <Compile Include="TestAdminJournal.cs" />
     <Compile Include="TestAdminLayers.cs" />
     <Compile Include="TestAdminRole.cs" />
+    <Compile Include="TestAdminServices.cs" />
     <Compile Include="TestAdminUser.cs" />
     <Compile Include="TestBaseLayers.cs" />
     <Compile Include="TestChangeSortLayers.cs" />
